<resources>
    <string name="app_name">Word Sleuth</string>
    <string name="txt_page_number">Page Number</string>
    <string name="txt_welcome">Welcome to Word Sleuth!</string>
    <string name="txt_title_page1">Instructions</string>
    <string name="txt_title_page2">Finding Anagrams</string>
    <string name="txt_title_page3">Finding Sub-Words</string>
    <string name="txt_title_page4">Word Combinations</string>
    <string name="txt_title_page5">Using Blank Letters in Games (*)</string>
    <string name="txt_title_page6">Crosswords and using Wildcards (-)</string>

    <string name="txt_skip_instructions">Swipe for info, tap to skip...</string>

    <string name="txt_instructions_page1">This app is designed to easily help users find anagrams,
        subwords, or word combinations that can be made from a set of letters. You could find an
        anagram of your name or other things, or use it as an aid for crosswords or games like
        Words With Friends(TM), or Scrabble(TM)...</string>
    <string name="txt_instructions_page2">To find anagrams, simply type the letters of names, or
        words you are curious about. For games like Scrabble(TM) or Words With Friends(TM),
        just enter your letters in no specific order in the search bar and Word Sleuth will do
        the work for you...</string>
    <string name="txt_instructions_page3">Sub-words are words that can be made with the letters
        provided. They are not full anagrams. Finding subwords is easy with Word Sleuth.
        They will appear in a list to view when a query is submitted, along with anagrams, and
        combinations, if any are found...</string>
    <string name="txt_instructions_page4">Word combinations are simply multiple word anagrams that
        match a user\'s query. For example a word combination anagram for \"Word Sleuth\" is
        \"Slower Thud\"...</string>
    <string name="txt_instructions_page5">Sometimes you don\'t know all the letters for a
        query , or when you have blank tiles in a game. You can substitute
        unknown letters with the "*" wildcard character and Word Sleuth will do the heavy
        lifting to find matches...</string>
    <string name="txt_instructions_page6">Word Sleuth is great for crosswords too. If you know
        the order of the word, you can enter unknown letters by using the character \"-\". Say you
        were playing a crossword puzzle, and you enter \"h-ll-\", Word Sleuth will
        return \"hello\" along with all other possibilities.</string>
    <string name="app_label">Word Sleuth Search</string>
    <string name="search_hint">Search for...</string>
    <string name="tv_search_instructions">To search, enter your query in the search bar above.
        Click on the icon to expand. Type \"*\" for wildcards.</string>
<string name="txt_about">About WordSleuth</string>
    <string name="txt_dict_info">Dictionary Info</string>
    <string name="txt_input_instructions">To search, enter your query in the search bar above.
        Click on the icon to expand. Type \"*\" for wildcards.</string>
    <string name="txt_loading">Loading...</string>
    <string name="txt_sample_query">Query</string>
    <string name="REGEX_ACCEPT_LOWER_PLUS_ASTERISK">[^a-z*]</string>
    <string name="regex_line_sperator">line.separator</string>
    <string name="txt_settings_tag">Settings</string>
    <string name="txt_dialog_yes">Yes</string>
    <string name="txt_dialog_no">No</string>
    <string name="txt_dialog_instruction_disable">Would you like to disable introduction help on app start?</string>
    <string name="txt_dialog_ok">Ok</string>
    <string name="PREFERENCE_FILE_KEY">com.rabbitfighter.wordsleuth.PREFERENCE_FILE_KEY</string>
    <string name="app_setting_disable_help">disableHelp</string>
    <string name="txt_share_I_Found">I found</string>
    <string name="txt_share_is_an_anagram">is an anagram for</string>
    <string name="txt_with_word_sleuth">with WordSleuth(TM)</string>
    <string name="rate_now">Rate</string>
    <string name="rate_title">Rate WordSleuth</string>
    <string name="rate_explanation">Did this app help you with finding cool anagrams or word combos? Please rate WordSleuth.</string>
    <string name="rate_later">Later</string>
    <string name="rate_never">Never</string>
    <string name="txt_help">Instructions</string>
    <string name="txt_length">Length:</string>
</resources>
